# pfpet

./: .gitignore  Cargo.toml  Procfile  README.md  project.toml
src/: main.rs
src/lib/: bonk.rs  discord.rs  github.rs  handler.rs  mod.rs  pet.rs  service.rs
src/lib/avatars/: discord.rs  github.rs  gravatar.rs  mod.rs  reddit.rs
src/lib/filters/: bonk.rs  cancel.rs  mod.rs  pet.rs
src/routes/: discord.rs  github.rs  mod.rs
src/routes/bonk/: discord.rs
