[package]
name = "pfpet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-web = "4.0.1"
env_logger = "0.9.0"
dotenv = "0.15.0"
image = "0.24.1"
lazy_static = "1.4.0"
serde_json = "1.0.79"

[dependencies.awc]
version = "3.0.0"
features = ["rustls"] # required for requesting HTTPS

[dependencies.serde]
version = "1.0.136"
features = ["derive"]
