[package]
name = "pfpet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-web = "4.0.1"
async-trait = "0.1.53"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures-util = "0.3.21"
image = "0.24.1"
lazy_static = "1.4.0"
retainer = "0.3.0"
serde_json = "1.0.79"
tracing = "0.1.34"
tracing-actix-web = "0.5.1"
tracing-subscriber = "0.3.11"

[dependencies.awc]
version = "3.0.0"
features = ["rustls"] # required for requesting HTTPS

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.tokio]
version = "1.17.0"
features = ["full"]
